@@ -1,1 +1,1 @@
-1.3.1rc0
+1.3.1
