@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.56 2008/10/06 13:21:41 tho Exp $
+$Id: ChangeLog,v 1.57 2008/10/06 13:33:09 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU 1.3.1:
+	- [array] add needed #include <stdint.h>
 	- [misc] u_atoi fix
 	- [misc] u_strtok added
 	- [config] fix u_string_aprintf calls (build fix)
